--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "test_ii_frontend",
+  "name": "coffee_frontend",
   "version": "0.1.0",
   "description": "Internet Computer starter application",
-  "keywords": ["Internet Computer", "Motoko", "JavaScript", "Canister"],
+  "keywords": [
+    "Internet Computer",
+    "Motoko",
+    "JavaScript",
+    "Canister"
+  ],
   "scripts": {
     "build": "webpack",
     "prebuild": "npm run generate",
     "start": "webpack serve --mode development --env development",
     "prestart": "npm run generate",
-    "generate": "dfx generate test_ii_backend"
+    "generate": "dfx generate coffee_backend"
   },
   "devDependencies": {
     "@dfinity/agent": "0.15.4",
+    "@dfinity/auth-client": "^0.15.4",
     "@dfinity/candid": "0.15.4",
+    "@dfinity/identity": "^0.15.4",
     "@dfinity/principal": "0.15.4",
     "assert": "2.0.0",
     "buffer": "6.0.3",
