--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coffee_frontend",
+  "name": "supply_chain_frontend",
   "version": "0.1.0",
   "description": "Internet Computer starter application",
   "keywords": [
@@ -13,7 +13,7 @@
     "prebuild": "npm run generate",
     "start": "webpack serve --mode development --env development",
     "prestart": "npm run generate",
-    "generate": "dfx generate coffee_backend"
+    "generate": "dfx generate supply_chain_backend"
   },
   "devDependencies": {
     "@dfinity/agent": "0.15.4",
